pomodoro-app/canary-service.yml
kind: Service
apiVersion: v1
metadata:
  name: canary-app-service
  labels:
    monitored: "true"

spec:
  type: ClusterIP
  selector:
    app: canary-app-deployment
  ports:
    - name: http  
      port: 8000
      targetPort: 8000
