pomodoro-app/ingress-canary.yml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: canary-app-service
                port:
                  number: 8000
