pomodoro-app/ingress-stable.yml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: stable-ingress

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:            
              service:
                name: stable-app-service
                port:
                  number: 8000
